Modification du titre et ajout d'un H1

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Mon super Website</title>
   </head>
   <body>
+    <h1>Le meilleur site</h1>
   
   </body>
 </html>
